# GESTIONAIRE_STOCKS

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
Forms/: mainwindow.ui
Forms/Widgets/: categorywiDGET.ui  categorywindow.ui  importwindow.ui  logswindow.ui  productswindow.ui  statswindow.ui  supplierwindow.ui
Header_Files/: mainwindow.h
Header_Files/Widgets/: CategoryWidget.h  ImportWidget.h  LogsWidget.h  ProductsWidget.h  SupplierWidget.h  statsWidget.h
Source_Files/: mainwindow.cpp
Source_Files/Widgets/: CategoryWidget.cpp  ImportWidget.cpp  LogsWidget.cpp  ProductsWidget.cpp  SupplierWidget.cpp  statsWidget.cpp
docs/html/: _category_widget_8h_source.html  _import_widget_8h_source.html  _logs_widget_8h_source.html  _products_widget_8h_source.html  _supplier_widget_8h_source.html  annotated.html  annotated_dup.js  class_category_widget-members.html  class_category_widget.html  class_category_widget.js  class_import_widget-members.html  class_import_widget.html  class_import_widget.js  class_logs_widget-members.html  class_logs_widget.html  class_logs_widget.js  class_main_window-members.html  class_main_window.html  class_products_widget-members.html  class_products_widget.html  class_products_widget.js  class_stats_widget-members.html  class_stats_widget.html  class_stats_widget.js  class_supplier_widget-members.html  class_supplier_widget.html  class_supplier_widget.js  classes.html  dir_7fa601e68c2de4afaacab5d8ce270028.html  dir_7fa601e68c2de4afaacab5d8ce270028.js  dir_838d428ccd8025a0ff257835f8e23669.html  dir_838d428ccd8025a0ff257835f8e23669.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  mainwindow_8h.html  (+4 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js
docs/latex/: _category_widget_8h_source.tex  _import_widget_8h_source.tex  _logs_widget_8h_source.tex  _products_widget_8h_source.tex  _supplier_widget_8h_source.tex  annotated.tex  class_category_widget.tex  class_import_widget.tex  class_logs_widget.tex  class_main_window.tex  class_products_widget.tex  class_stats_widget.tex  class_supplier_widget.tex  files.tex  hierarchy.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  refman.tex  stats_widget_8h_source.tex
